--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
 kafka-python==2.0.2
-psycopg2==2.9.3
+# psycopg2-binary==2.9.6
+fastapi==0.110.0
+uvicorn[standard]==0.27.1
+sqlalchemy==2.0.29
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+pydantic==2.6.4
+pydantic-settings==2.2.1
+aiofiles==23.2.1
+python-multipart==0.0.9
+jinja2==3.1.3
